--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,6 +230,7 @@
     <string name="emulation_slot6">Slot 6</string>
     <string name="emulation_quicksave">Quick Save</string>
     <string name="emulation_quickload">Quick Load</string>
+    <string name="emulation_toggle_perf_stats">Toggle Perf Stats</string>
     <string name="emulation_refresh_wiimotes">Refresh Wii Remotes</string>
     <string name="emulation_configure_controls">Configure Controls</string>
     <string name="emulation_edit_layout">Edit Layout</string>
