--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@
     <string name="turntable_crossfade">Crossfade</string>
 
     <!-- CPU Preference Fragment -->
-    <string name="cpu_core">CPU Core</string>
+    <string name="cpu_jit">Enable CPU JIT</string>
     <string name="cpu_core_desc">%s</string>
     <string name="dual_core">Dual Core</string>
     <string name="dual_core_descrip">Split workload to two CPU cores instead of one. Increases speed.</string>
@@ -125,16 +125,24 @@
     <string name="wiimote_speaker_description">Enable sound output through the speaker on a real Wiimote (DolphinBar required).</string>
     <string name="audio_stretch">Audio Stretching</string>
     <string name="audio_stretch_description">Stretches audio to reduce stuttering. Increases latency.</string>
+    <string name="region">Emulated region</string>
 
     <!-- Video Preference Fragment -->
     <string name="video_backend">Video Backend</string>
     <string name="video_backend_descrip">Select the API used for graphics rendering.</string>
     <string name="show_fps">Show FPS</string>
     <string name="show_fps_descrip">Show the number of frames rendered per second as a measure of emulation speed.</string>
+    <string name="vsync">Enable V-Sync</string>
+    <string name="hw_renderer">Enable hardware renderer</string>
+    <string name="hw_shaders">Enable hardware shader</string>
+    <string name="use_shader_jit">Enable JIT compiler for shaders</string>
+    <string name="hw_shaders_descrip">Use hardware to emulate 3DS shaders</string>
+    <string name="shaders_accurate_mul">Enable accurate multiplication in hardware shaders</string>>
+    <string name="shaders_accurate_gs">Enable accurate geometric shaders in hardware shaders</string>
 
     <string name="enhancements">Enhancements</string>
     <string name="internal_resolution">Internal Resolution</string>
-    <string name="internal_resolution_descrip">Specifies the resolution used to render at. A high resolution will improve visual quality a lot but is also quite heavy on performance and might cause glitches in certain games.</string>
+    <string name="internal_resolution_descrip">Specifies the resolution used to render at. A high resolution will improve visual quality a lot but is also quite heavy on performance and might cause glitches in certain games. Use zero(0) for auto scaling</string>
     <string name="FSAA">Full-scene Anti-aliasing</string>
     <string name="FSAA_descrip">Reduces the amount of aliasing caused by rasterizing 3D graphics. This makes the rendered picture look less blocky. Heavily decreases emulation speed and sometimes causes issues.</string>
     <string name="anisotropic_filtering">Anisotropic Filtering</string>
